[RISCV] Fix instruction requires the following: 'D'/'F'/'M' https://bugs.webkit.org/show_bug.cgi?id=282900

Reviewed by Yusuke Suzuki.

This is a llvm bug, passing `-march=riscv64gc -cpu=lp64d` from clang
will lost after it got llvm side. So we have to set arch here.

More related infomations are here:

- https://github.com/rust-lang/rust/issues/80608
- https://github.com/llvm/llvm-project/issues/61991
- https://github.com/llvm/llvm-project/pull/97685

* Source/JavaScriptCore/assembler/MacroAssemblerRISCV64.cpp:
* Source/JavaScriptCore/llint/LowLevelInterpreter.cpp:

Canonical link: https://commits.webkit.org/286815@main